# dev-course

./: .gitignore  Cargo.toml  README.md
advance/lesson-3/: Cargo.toml
advance/lesson-3/node/: Cargo.toml
advance/lesson-3/node/src/: service.rs
advance/lesson-3/pallets/kitties/: Cargo.toml  README.md  expand.rs
advance/lesson-3/pallets/kitties/src/: benchmarking.rs  config.rs  errors.rs  events.rs  extrinsics.rs  genesis.rs  hooks.rs  impls.rs  lib.rs  market.rs  migration.rs  mock.rs  tests.rs  validate.rs  weights.rs
advance/lesson-3/runtime/: .gitignore  Cargo.toml
advance/lesson-3/runtime/src/: lib.rs
advance/lesson-5/: .gitignore  zombienet.toml
advance/lesson-5/node/src/: chain_spec.rs  service.rs
advance/lesson-5/pallets/template/: Cargo.toml
advance/lesson-5/pallets/template/src/: lib.rs
advance/lesson-5/runtime/src/: benchmarks.rs  lib.rs
advance/lesson-5/runtime/src/configs/: mod.rs
erc20/: .gitignore  Cargo.toml  e2e_tests.rs  lib.rs
erc20/traits/: Cargo.toml  lib.rs
node/: Cargo.toml
node/src/: service.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs  tests.rs
primary/lesson-3/: Cargo.toml
primary/lesson-3/src/: container.rs  exception.rs  flows.rs  main.rs  traits.rs  types.rs
primary/lesson-6/: package.json
primary/lesson-6/src/: app.ts
runtime/: Cargo.toml
runtime/src/: lib.rs
