[package]
name = "erc20"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
traits = { path = "./traits", default-features = false }
[dev-dependencies]
ink_e2e = { version = "5.0.0" }
[lib]
name = "erc20"
path = "lib.rs"


[features]
default = ["std"]
std = [
"ink/std",
]
ink-as-dependency = []
e2e-tests = []