[package]
name = "traits"
version = "0.1.0"
authors = [""]
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.0.0", default-features = false }

[lib]
name = "traits"
path = "lib.rs"
crate-type = ["rlib"]

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
